--- a/Talkative/Talkative.csproj
+++ b/Talkative/Talkative.csproj
@@ -85,6 +85,7 @@
 	  <PackageReference Include="FirebaseAuthentication.net" Version="3.7.2" />
 	  <PackageReference Include="FirebaseDatabase.net" Version="3.3.3" />
 	  <PackageReference Include="Prism.DryIoc.Maui" Version="8.1.273-pre" />
+	  <PackageReference Include="Scrypt.NET" Version="1.3.0" />
 	  <PackageReference Include="System.Speech" Version="7.0.0" />
 	  <PackageReference Include="Xamarin.Essentials" Version="1.7.5" />
 	</ItemGroup>
