onAppearing ve resim işi çözüldü

--- a/Talkative/Talkative.csproj
+++ b/Talkative/Talkative.csproj
@@ -59,6 +59,7 @@
 	  <None Remove="Resources\Fonts\Inter-Thin.ttf" />
 	  <None Remove="Resources\Images\arrow.png" />
 	  <None Remove="Resources\Images\boy.png" />
+	  <None Remove="Resources\Images\chat.png" />
 	  <None Remove="Resources\Images\email.png" />
 	  <None Remove="Resources\Images\home.png" />
 	  <None Remove="Resources\Images\homeicon.png" />
@@ -78,6 +79,7 @@
 	  <None Remove="Resources\Images\student.png" />
 	  <None Remove="Resources\Images\test.png" />
 	  <None Remove="Resources\Images\user.png" />
+	  <None Remove="Resources\Images\wordofmouth.png" />
 	</ItemGroup>
 
 	<ItemGroup>
