--- a/Talkative/Talkative.csproj
+++ b/Talkative/Talkative.csproj
@@ -96,6 +96,9 @@
 	  <MauiXaml Update="Source\Pages\GroupCreatePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Source\Pages\GroupDeletePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Source\Pages\GroupsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
